tests/paczka1/fuzzy1/42596792.err
Error in line 1: DzC S283 43,7
Error in line 14: 7ubiJh90P A906 96,84
Error in line 13: 7ubiJh90P A516 52,8
Error in line 15: lM2gdoTzUMv A516 33,7
Error in line 22: A906 S524 58,5
Error in line 4: 2LP67 A906 1,1
Error in line 27: 2LP67 S283 99,8
Error in line 29: 2LP67 S524 78,8
Error in line 33: DzC S283 8$,0
Error in line 35: lM2gdoTzUMv A;06 34,2
Error in line 32: DzC S283 24,8
